@startuml
'https://plantuml.com/class-diagram
abstract class Autobus{
    - id: Int
    - conductor: Conductor
    - preuBase: Double
    - Autobusos: List<Autobus>
    - Conductors: List<Conductor>
}

class Urbans{
    -ruta: String
    --Metodos--
    +calcularPreu(): Double
}


class Interurbans{
    - nombreQuilometres: Double
    --Metodos--
    + calcularPreu(): Double
}



class Conductor{
    - nom: String
    - salari: Double

}

Autobus <|-- Urbans
Autobus <|-- Interurbans
Autobus o-- Conductor


@enduml